upd. swagger doc
